# Lightweight-Physics-Engine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  flake.nix
include/Body/: Body.hpp
include/core/: application.hpp
include/glad/: glad.h
include/math/: vec2.hpp
include/physics/: world.hpp
include/render/: debug_renderer.hpp
src/: glad.c  main.cpp
src/Body/: Body.cpp
src/core/: application.cpp
src/math/: vec2.cpp
src/physics/: world.cpp
src/render/: debug_renderer.cpp
